--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Enviroment variables needed to connect to the LiveKit server.
-LIVEKIT_API_KEY=<your_api_key>
-LIVEKIT_API_SECRET=<your_api_secret>
-LIVEKIT_URL=wss://<project-subdomain>.livekit.cloud
+NODE_ENV={NODE_ENV}
+LIVEKIT_API_KEY="{LIVEKIT_API_KEY}"
+LIVEKIT_API_SECRET="{LIVEKIT_API_SECRET}"
+LIVEKIT_URL={LIVEKIT_URL}
