--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NODE_ENV=production
-LIVEKIT_API_KEY="API9BPJsfkasKi7"
-LIVEKIT_API_SECRET="KFZBex8YSV9EZBZdOJfdILOsardHxvQXfmf1SvMKEHeB"
-LIVEKIT_URL="wss://narratest-5onoesj5.livekit.cloud"
+LIVEKIT_API_KEY="{LIVEKIT_API_KEY}"
+LIVEKIT_API_SECRET="{LIVEKIT_API_SECRET}"
+LIVEKIT_URL={LIVEKIT_URL}
+
