--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,4 @@
 NODE_ENV=production
-LIVEKIT_API_KEY="{LIVEKIT_API_KEY}"
-LIVEKIT_API_SECRET="{LIVEKIT_API_SECRET}"
+LIVEKIT_API_KEY={LIVEKIT_API_KEY}
+LIVEKIT_API_SECRET={LIVEKIT_API_SECRET}
 LIVEKIT_URL={LIVEKIT_URL}
-
