--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV={NODE_ENV}
-LIVEKIT_API_KEY="{LIVEKIT_API_KEY}"
-LIVEKIT_API_SECRET="{LIVEKIT_API_SECRET}"
+LIVEKIT_API_KEY={LIVEKIT_API_KEY}
+LIVEKIT_API_SECRET={LIVEKIT_API_SECRET}
 LIVEKIT_URL={LIVEKIT_URL}
+BACKEND_URL={BACKEND_URL}
