--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@ NODE_ENV=production
 LIVEKIT_API_KEY={LIVEKIT_API_KEY}
 LIVEKIT_API_SECRET={LIVEKIT_API_SECRET}
 LIVEKIT_URL={LIVEKIT_URL}
-BACKEND_URL={BACKEND_URL}
-BUBBLE_VALIDATE_URL={BUBBLE_VALIDATE_URL}
+NEXT_PUBLIC_BACKEND_URL={BACKEND_URL}
+NEXT_PUBLIC_BUBBLE_VALIDATE_URL={BUBBLE_VALIDATE_URL}
